# LR0Parser

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Automaton.cpp  Automaton.h  Item.cpp  Item.h  LRParser.cpp  LRParser.h  Production.cpp  Production.h  data.cpp  data.h  main.cpp
